test/conformance/chainsaw/verify-images/clusterpolicy/cornercases/multiple-attestors/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
  name: validate-signatures
spec:
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-1
    verifyImages:
    - attestors:
      - count: 1
        entries:
        - keys:
            ctlog:
              ignoreSCT: true
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              ignoreTlog: true
              url: https://rekor.sigstore.dev
      imageReferences:
      - ghcr.io/kyverno/test-verify-image:*
      mutateDigest: true
      required: true
      verifyDigest: true
      failureAction: Enforce
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-2
    verifyImages:
    - attestors:
      - count: 1
        entries:
        - keys:
            ctlog:
              ignoreSCT: true
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEOUD2uzRHLnx1oH6XAnF+8haL73BF
[...]
              -----END PUBLIC KEY-----
            rekor:
              ignoreTlog: true
              url: https://rekor.sigstore.dev
      imageReferences:
      - my.local.repo/*
      mutateDigest: false
      required: true
      verifyDigest: false
      failureAction: Enforce
  webhookTimeoutSeconds: 30
