test/conformance/chainsaw/verify-images/clusterpolicy/cornercases/multiple-attestors/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: multiple-attestors
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: validate-signatures
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
